MDEV-28166 sql_mode=ORACLE: fully qualified package function calls do not work: db.pkg.func()

Also fixes MDEV-19328 sql_mode=ORACLE: Package function in VIEW